--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 <!-- To make this form functional, sign up at-->
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
-                <form name="formulario" data-netfily="true" action="" id="contactForm" method="post">
+                <form name="formulario" data-netlify="true"  netlify id="contactForm" method="post">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
