mejoras de diseño

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <!-- Masthead-->
         <header  class="masthead">
             <div class="container">
-                <div class="masthead-subheading">¡Bienvenido a Ecoflash!</div>
+                <div class="masthead-subheading">¡Bienvenido a Ecoflash!
+                    
+                </div>
                 <div  id="subtitulo" class="masthead-heading  text-uppercase">Por ti, por mi , por el futuro</div>
                 <div class="container-fluid">
                     <p class="descripcion " >¿Quieres ayudar a que nuestro planeta sea ecológicamente más sostenible? EcoFlash es una aplicación que se basa sobre todo en la recolección de los residuos reciclables fomentando una cultura sostenible donde las personas tengan mayor facilidad para manejar sus desechos. </p>
@@ -103,7 +105,9 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Próximamente</h2>
-                    <h3 class="section-subheading text-muted">Usa Ecoflash desde la app</h3>
+                    <h3 class="section-subheading text-muted">Usa Ecoflash desde la app </h3>
+                    <h3 class="section-subheading text-muted">----------A partir del 16 de mayo----------</h3>
+                    
                 </div>
                 <div class="row">
                     <h2 class="text-center"></h2>
@@ -331,6 +335,9 @@
                     <br><br> Si eres una persona que desea utilizar EcoFlash para gestionar un sistema de reciclaje en tu hogar envíanos un mensaje con tus  <a style="font-weight: bold;" href="#contact">dudas o comentarios de como empezar</a> y muestranos tu interés por usar la app que se lanzará proximamente.
 
                 </p>
+                <div class="text-center">                    
+                    <h3 class="section-subheading text-uppercase" >Las primeras 30 personas en <a style="font-weight: bold;" href="#contact">CONTACTARSE</a> con nosotros tendrán una sorpresa.</h3>
+                </div>
             </div>            
         </section>
         <!-- Team-->
