--- a/index.html
+++ b/index.html
@@ -461,6 +461,9 @@
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col-12 ">Copyright &copy; EcoFlash 2021</div>
+                    <div class="col-12 ">Design by Bryan Loor</div>
+
+                    
                     <!--div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
