--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
                 </p>
                 <div class="text-center">                    
-                    <h3 class="section-subheading text-uppercase" >Las primeras 30 personas en <a style="font-weight: bold;" href="#contact">CONTACTARSE</a> con nosotros tendrán una sorpresa.</h3>
+                    <h3 class="section-subheading text-uppercase" >Si eres de las primeras 100 personas en <a style="font-weight: bold;" href="#contact">CONTACTARSE</a> con nosotros tendrás una sorpresa.</h3>
                 </div>
             </div>            
         </section>
