--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                             <div class="text-center">
                                  <span class="free">Normal</span>
                                  <span class="d-block mt-3 amount">$25</span>
-                                 <span class="plan">Un solo pago </span>
-                                 <br><br><br><br>
+                                 <span class="plan">/Mensual </span>
+                                 <br><br><br>
                                  <p>Visibilidad en la aplicación móvil <i style="color: rgb(25, 99, 25);" class="fa fa-check-circle" aria-hidden="true"></i></p>
                                  <p class="" >Banners publicitarios dentro de la página <i style="color: rgb(25, 99, 25);" class="fa fa-check-circle" aria-hidden="true"></i> </p>
                                  <p>Gráficos estadísticos <i style="color: red;" class="fa fa-times-circle" aria-hidden="true"></i> </p>
@@ -300,9 +300,9 @@
                         <div class="card1 p-3 mt-3">
                             <div class="text-center">
                                  <span class="premium">Premium</span> 
-                                 <span class="d-block mt-3 amount1">$25</span> 
-                                 <span class="plan1">Un solo pago</span><br>
-                                 <span class="plan1">+ $3/mensual</span>
+                                 <span class="d-block mt-3 amount1">$28</span> 
+                         
+                                 <span class="plan1">/Mensual</span>
                                  <br><br><br>
                                  <div class="text-white">
                                     <p>Visibilidad en la aplicación móvil <i style="color: rgb(25, 99, 25);" class="fa fa-check-circle" aria-hidden="true"></i></p>
